# agreement-commission-portal

./: .dockerignore  .env.example  .gitignore  .replit  AWS_DEPLOYMENT.md  Dockerfile  PYTHON_MIGRATION_PLAN.md  README.md  TECHNICAL_IMPROVEMENT_PLAN.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  replit.md  setup_k40_cron.sh  start_django.sh  sync_k40.py  vite.config.ts
attached_assets/: Agreement_Paper_1773808557702.docx  Pasted--Building-334-0s-20-25--1773803501086_1773803501086.txt  Pasted--CRM-Security-Checklist-For-Admission-Student-CRM-1-Log_1773635197311.txt  Pasted--Image-agreement-commission-portal-app-Built--177314333_1773143334158.txt  Pasted--SIC-COMMISSION-TRACKER-FINAL-STABLE--1773020829777_1773020829777.txt  Pasted--SUB-AGENT-COMMISSION-FINAL-FULL-COD-1773047191631_1773047191632.txt  Pasted--System-restart-required-Last-login-Mon-Mar-9-09-28-05-_1773101920138.txt  Pasted--app-resolving-provenance-for-metadata-file--1773138742_1773138742061.txt  Pasted--base-3-3-RUN-apt-get-update-apt-get-install-y-no-insta_1773142564086.txt  Pasted--getSQL-return-new-K-this-HC-Symbol-for-drizzle-IsDrizz_1773033537355.txt  Pasted--git-clone-https-github-com-Bijay053-agreement-commissi_1773016175119.txt  Pasted--internal-load-build-context--1773034843828_1773034843829.txt  Pasted--internal-load-dockerignore--1773035212805_1773035212806.txt  Pasted--production-4-8-COPY-from-build-app-drizzle-config-ts-d_1773035143638.txt  Pasted--production-7-7-WORKDIR-app-backend--1773139507609_1773139507610.txt  (+109 more)
client/: index.html
(+235 files in other folders)
