[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.64",
    "celery>=5.6.2",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.1.0",
    "openpyxl>=3.1.5",
    "pikepdf>=10.3.0",
    "psycopg2-binary>=2.9.11",
    "pyclamd>=0.4.0",
    "python-magic>=0.4.27",
    "sentry-sdk>=2.54.0",
    "structlog>=25.5.0",
    "whitenoise>=6.12.0",
]
